[tool.poetry]
name = "equella_fine_arts_jr_review"
version = "0.1.0"
description = "scripts for handling FA JR in VAULT"
authors = ["Eric Phetteplace <phette23@gmail.com>"]
license = "ECL-2.0"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
