[tool.poetry]
name = "fajr"
version = "0.1.0"
description = "scripts for handling Fine Arts Junior Review in VAULT"
authors = ["Eric Phetteplace <phette23@gmail.com>"]
license = "ECL-2.0"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
fajr = "fajr.process:start"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
